--- a/src/originalPaintingDialog/static/originalPaintingDialog.css
+++ b/src/originalPaintingDialog/static/originalPaintingDialog.css
@@ -1,5 +1,4 @@
 .original-painting-dialog-wrapper {
-  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -8,10 +7,22 @@
   overflow: hidden;
   min-width: 1440px;
   min-height: 688px;
+  opacity: 0;
+  visibility: hidden;
 }
 
-.original-painting-dialog-wrapper.isShow {
-  display: block;
+.original-painting-dialog-wrapper.show-enter,
+.original-painting-dialog-wrapper.show-enter-active,
+.original-painting-dialog-wrapper.show-enter-done,
+.original-painting-dialog-wrapper.show-exit,
+.original-painting-dialog-wrapper.show-exit-active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.original-painting-dialog-wrapper.show-exit-done {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .original-painting-dialog-mask {
@@ -49,15 +60,14 @@
   }
 }
 
-.close-original-painting-dialog-button.isHiding {
-  animation-name: close-original-painting-dialog-button-isHiding-scale;
-  animation-delay: 0s;
+.close-original-painting-dialog-button.zoom-exit {
+  animation-name: close-original-painting-dialog-button-hide;
   animation-duration: 1s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
 
-@keyframes close-original-painting-dialog-button-isHiding-scale {
+@keyframes close-original-painting-dialog-button-hide {
   0% {
     transform: scale(1);
   }
@@ -73,40 +83,40 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 100%;
+  width: 45%;
 }
 
-.original-painting-dialog.isShowing {
-  animation-name: original-painting-dialog-wrapper-isShowing;
-  animation-duration: 2s;
+.original-painting-dialog.zoom-enter {
+  animation-name: original-painting-dialog-show;
+  animation-duration: 1s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 }
 
-@keyframes original-painting-dialog-wrapper-isShowing {
+@keyframes original-painting-dialog-show {
   0% {
-    height: 50%;
+    transform: translateX(-50%) translateY(-50%) scale(0.5);
   }
 
   100% {
-    height: 90%;
+    transform: translateX(-50%) translateY(-50%) scale(1);
   }
 }
 
-.original-painting-dialog.isHiding {
-  animation-name: original-painting-dialog-wrapper-isHiding;
+.original-painting-dialog.zoom-exit {
+  animation-name: original-painting-dialog-hide;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
 }
 
-@keyframes original-painting-dialog-wrapper-isHiding {
+@keyframes original-painting-dialog-hide {
   0% {
-    height: 90%;
+    transform: translateX(-50%) translateY(-50%) scale(1);
   }
 
   100% {
-    height: 50%;
+    transform: translateX(-50%) translateY(-50%) scale(0.5);
   }
 }
 
