--- a/src/common/menu/static/menu.css
+++ b/src/common/menu/static/menu.css
@@ -39,7 +39,7 @@
 .menu-button.isClosing {
   transform: scale(0);
   animation-name: menu-button-active;
-  animation-duration: 0.5s;
+  animation-duration: 0.3s;
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
 }
@@ -47,9 +47,11 @@
 @keyframes menu-button-active {
   0% {
     transform: scale(1);
+    opacity: 1;
   }
   100% {
-    transform: scale(0);
+    transform: scale(0.8);
+    opacity: 0;
   }
 }
 
