--- a/src/fearCity/static/fearCity.css
+++ b/src/fearCity/static/fearCity.css
@@ -166,6 +166,12 @@
   width: 10.8%;
 }
 
+.personB a,
+.personC a,
+.personD a {
+  cursor: unset;
+}
+
 .personB-wrapper {
   z-index: 7;
   position: absolute;
