修改故事 B 兔子動態

--- a/src/storyB/static/storyB.css
+++ b/src/storyB/static/storyB.css
@@ -112,9 +112,9 @@
   width: 16.83%;
   transform-origin: 65% bottom;
   animation-name: rabbitA-shake;
-  animation-duration: 3s;
+  animation-duration: 6s;
   animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  animation-timing-function: cubic-bezier(0.48, 0.04, 0.52, 0.96);
 }
 
 .rabbitA:hover {
@@ -123,23 +123,23 @@
 
 @keyframes rabbitA-shake {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(-2deg);
   }
 
   25% {
-    transform: rotate(-6deg);
+    transform: rotate(3deg);
   }
 
   50% {
-    transform: rotate(0deg);
+    transform: rotate(-4deg);
   }
 
-  75% {
-    transform: rotate(6deg);
+  75.5% {
+    transform: rotate(2deg);
   }
 
   100% {
-    transform: rotate(0deg);
+    transform: rotate(-2deg);
   }
 }
 
