--- a/src/common/infoDialog/static/infoDialog.css
+++ b/src/common/infoDialog/static/infoDialog.css
@@ -188,17 +188,17 @@
 }
 
 .info-dialog .title {
-  margin-bottom: 21.6px;
+  margin-bottom: 18px;
 }
 
 .info-dialog section {
-  margin-bottom: 54px;
+  margin-bottom: 45px;
 }
 
 .info-dialog h2 {
   color: #e57351;
   font-family: Noto Sans TC Black;
-  font-size: 23.6px;
+  font-size: 20px;
   padding: 0;
   margin: 0;
 }
@@ -206,7 +206,7 @@
 .info-dialog h3 {
   color: #e57351;
   font-family: Noto Sans TC Black;
-  font-size: 17.75px;
+  font-size: 16px;
   padding: 0;
   margin: 0;
 }
@@ -214,7 +214,7 @@
 .info-dialog p {
   color: #5980b5;
   font-family: Noto Sans TC Medium;
-  font-size: 13.77px;
+  font-size: 14px;
   padding: 0;
-  margin: 0;
+  margin: 0 0 10px;
 }
