--- a/src/adventureStory/static/adventureStory.css
+++ b/src/adventureStory/static/adventureStory.css
@@ -76,11 +76,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  height: 812px;
+  height: 100%;
   overflow: hidden;
 }
 
-.adventureStory-img-wrapper::before,
+/* .adventureStory-img-wrapper::before,
 .adventureStory-img-wrapper::after {
   content: "";
   display: block;
@@ -89,11 +89,11 @@
   position: absolute;
   top: 0;
   z-index: 10;
-}
+} */
 
 .adventureStory-img {
-  width: 4386px;
-  height: 812px;
+  width: 312.5%;
+  height: 100%;
   user-select: none;
   position: absolute;
   top: 0;
