--- a/src/storyE/static/storyE.css
+++ b/src/storyE/static/storyE.css
@@ -28,8 +28,8 @@
   z-index: 5;
   position: absolute;
   top: 68.85%;
-  right: 76%;
-  width: 2.38%;
+  left: 20%;
+  width: 3%;
   animation-name: patternG-move;
   animation-delay: 1s;
   animation-duration: 2s;
