--- a/src/common/infoDialog/static/infoDialog.css
+++ b/src/common/infoDialog/static/infoDialog.css
@@ -118,10 +118,12 @@
 @keyframes zoom-out {
   0% {
     transform: scale(1);
+    opacity: 1;
   }
 
   100% {
-    transform: scale(0);
+    transform: scale(0.8);
+    opacity: 0;
   }
 }
 
