--- a/src/adventureStory/static/adventureStory.css
+++ b/src/adventureStory/static/adventureStory.css
@@ -46,10 +46,12 @@
 @keyframes close-adventureStory-button-isHiding-scale {
   0% {
     transform: scale(1);
+    opacity: 1;
   }
 
   100% {
-    transform: scale(0);
+    transform: scale(0.8);
+    opacity: 0;
   }
 }
 
